--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
+include *.md
 include LICENSE
-include README.md
-recursive-include exps *.json
-recursive-include resources *.png *.md
+recursive-include pycil2/exps *.json
+recursive-include pycil2/resources *.png *.md
